# pyoptflow

./: .appveyor.yml  .gitignore  .mypy.ini  .travis.yml  HornSchunck.py  LucasKanade.py  README.md  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
archive/: .appveyor.yml  .travis.yml
data/rubic/: rubic.13  rubic.14  rubic.17  rubic.5  rubic.6
matlab/: HornSchunck.m  RunHornSchunck.m  computeDerivatives.m  gaussFilter.m  plotFlow.m  smoothImg.m
pyoptflow/: __init__.py  hornschunck.py  io.py  lucaskanade.py  plots.py
src/pyoptflow/: __init__.py  hornschunck.py  lucaskanade.py  plots.py
src/pyoptflow/tests/: test_all.py
src/pyoptflow/tests/data/rubic/: rubic.-1  rubic.0  rubic.1  rubic.10  rubic.11  rubic.12  rubic.15  rubic.16  rubic.18  rubic.19  rubic.2  rubic.3  rubic.4  rubic.7  rubic.8  rubic.9
tests/: test.py  test_all.py
