[metadata]
name = pyoptflow
version = 1.3.2
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/pyoptflow
description = Pure Python optical flow: Horn-Schunck
keywords =
  optical flow
  Horn-Schunck
  Lucas-Kanade
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
scripts =
  HornSchunck.py
  LucasKanade.py
install_requires =
  imageio
  scipy
  numpy

[options.extras_require]
tests =
  pytest >= 3.6
lint =
  flake8
  mypy
plot =
  matplotlib
